# qr-bar-code-challenge

./: .envrc.example  .gitignore  README.md  docker-compose.mac.yaml  docker-compose.ubuntu.yaml  remake-container.sh
backend/: Dockerfile  pyproject.toml  start.sh
backend/app/api/: apis.py  models.py  urls.py
backend/app/api/migrations/: 0001_initial.py
backend/app/config/: settings.py  urls.py
frontend/: .eslintignore  .eslintrc.json  Dockerfile.mac  Dockerfile.ubuntu  jest.config.ts  jest.setup.ts  next.json.js  package-lock.json  package.json  playwright.config.ts  utils.tsx
frontend/app/: page.module.css  page.test.tsx  page.tsx
